Avoid sudden scroll jumps on swapping standings rows
Modern browsers try to "follow" elements jumping out of the viewport.
Set overflow-anchor: none to disable the behavior.

c.f.
https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-anchor

--- a/frontend/css/livesite.css
+++ b/frontend/css/livesite.css
@@ -65,6 +65,7 @@ a.no-decoration {
 
 .standard-standings {
   line-height: 1.3;
+  overflow-anchor: none;
 }
 
 .standard-standings .team-row {
